{
    "name": "TestInput",
    "maps": [
        {
            "name": "Player",
            "id": "7450a7e6-05b7-4d65-a6b7-1c3baccf3ad2",
            "actions": [
                {
                    "name": "MousePos",
                    "type": "PassThrough",
                    "id": "4d0ff2ab-7e0a-4e79-b045-ec39378d6045",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrustAug",
                    "type": "Button",
                    "id": "07456bc3-a2a5-4605-b9e7-a35fd7bb4a25",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Boost",
                    "type": "Button",
                    "id": "dc380f0e-cf7d-4605-bcc9-176b55d9a8c8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "11b318bd-2ad7-48f3-9cdc-c29fc7e2f1e5",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d90711b-3d7e-4302-a661-3f116de918f8",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrustAug",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbfeeb31-2107-4b2e-8697-1349e60fd67c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}